deployment/cloud/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: humanos
  labels:
    name: humanos
    environment: production
