deployment/cloud/kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: humanos-backend-service
  namespace: humanos
spec:
  type: ClusterIP
  selector:
    app: humanos-backend
  ports:
    - port: 8000
      targetPort: 8000
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: humanos-frontend-service
  namespace: humanos
spec:
  type: ClusterIP
  selector:
    app: humanos-frontend
  ports:
    - port: 3000
      targetPort: 3000
      name: http
