deployment/cloud/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: humanos-ingress
  namespace: humanos
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/websocket-services: humanos-backend-service
spec:
  rules:
    - host: humanos.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: humanos-backend-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: humanos-frontend-service
                port:
                  number: 3000
